TWEAK: Update CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,19 @@
 image: node:14
 
-stages:          # List of stages for jobs, and their order of execution
-  - build
-  - test
-  - deploy
+# This folder is cached between builds
+# https://docs.gitlab.com/ee/ci/yaml/index.html#cache
+cache:
+  key:
+    files:
+      - package-lock.json
+  paths:
+    - .npm/
 
-build-job:       # This job runs in the build stage, which runs first.
-  stage: build
-  script:
-    - npm install
+before_script:
+  - npm ci --include=dev --cache .npm --prefer-offline
+
+stages:          # List of stages for jobs, and their order of execution
+  - test
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
@@ -19,9 +24,3 @@ lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
     - npm run lint
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed. Maybe."
