ADDED: ci coverage

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "test": "mocha",
     "lint": "eslint 'src/**/*.js'",
+    "coverage": "npx nyc --reporter cobertura mocha",
     "start": "bin/buttress.sh",
     "docker:build": "docker build -t buttress .",
     "docker:run": "docker-compose -f .docker/docker-compose.yml up"
