--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@socket.io/redis-emitter": "~4.1.1",
     "body-parser": "~1.19.2",
     "express": "~4.17.3",
+    "JSONStream": "^1.3.5",
     "method-override": "~3.0.0",
     "mongodb": "~4.7.0",
     "morgan": "~1.10.0",
