TWEAK gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ cache:
     - .npm/
 
 before_script:
+  - npm config set @buttress:registry https://git.wearelighten.co.uk/api/v4/projects/318/packages/npm/
+  - npm config set -- '//git.wearelighten.co.uk/api/v4/projects/318/packages/npm/:_authToken' "$CI_BUTTRESS_REG_TOKEN"
   - npm ci --include=dev --cache .npm --prefer-offline
 
 stages:          # List of stages for jobs, and their order of execution
