--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buttress/buttress-js",
-  "version": "2.4.3",
+  "version": "3.0.0-1",
   "description": "The federated real-time open data platform",
   "author": "Data Performance Consultancy LTD",
   "license": "AGPL-3.0-or-later",
