TWEAK: Docker config

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,7 +1,10 @@
 version: "3.9"
 services:
   buttress:
-    build: ../
+    build:
+      context: ../
+      args:
+        NPM_TOKEN: "${NPM_TOKEN}"
     ports:
       - ${REST_LISTEN_PORT:-8080}:8080
       - ${SOCK_LISTEN_PORT:-8081}:8081
@@ -11,10 +14,10 @@ services:
       BUTTRESS_APP_CODE: ${APP_CODE:-buttress}
       BUTTRESS_APP_PROTOCOL: ${APP_PROTOCOL:-https}
       BUTTRESS_APP_PATH: ${APP_PATH:-/code}
-      BUTTRESS_HOST_URL: "https://localhost:6000"
+      BUTTRESS_HOST_URL: "https://localhost:${REST_LISTEN_PORT:-8080}"
       BUTTRESS_REST_LISTEN_PORT: 8080
       BUTTRESS_SOCK_LISTEN_PORT: 8081
-      BUTTRESS_MONGO_URL: ${APP_PATH:-mongodb://mongodb:27017}
+      BUTTRESS_DATASTORE_CONNECTION_STRING: ${BUTTRESS_DATASTORE_CONNECTION_STRING:-mongodb://mongodb:27017}
       BUTTRESS_REDIS_PORT: ${REDIS_PORT:-6379}
       BUTTRESS_REDIS_HOST: ${REDIS_HOST:-redis}
       BUTTRESS_REST_APP: ${REST_APP:-primary}
