--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,13 @@ lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
     - npm run lint
+
+pages:
+  stage: deploy
+  script:
+  - mkdir .public
+  - cp -r docs/. public
+  - mv .public public
+  artifacts:
+    paths:
+    - public
