--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ lint-test-job:   # This job also runs in the test stage.
 pages:
   stage: deploy
   script:
-  - mkdir .public/$CI_PIPELINE_ID
+  - mkdir -p .public/$CI_PIPELINE_ID
   - cp -r docs/. .public/$CI_PIPELINE_ID/
   - mv .public/$CI_PIPELINE_ID/ public/$CI_PIPELINE_ID/
   artifacts:
