--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     "url": "https://github.com/wearelighten/buttress-js/issues"
   },
   "dependencies": {
-    "@buttress/api": "^3.0.0-31",
     "@buttress/snippets": "1.0.0-10",
+    "@buttress/api": "^3.0.0-31",
+    "@hashgraph/sdk": "^2.19.2",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~4.1.1",
+    "JSONStream": "^1.3.5",
+    "base64url": "^3.0.1",
+    "bip39": "^3.1.0",
     "body-parser": "~1.20.0",
     "bson-objectid": "^2.0.2",
     "cross-fetch": "^3.1.5",
     "express": "~4.18.1",
     "isolated-vm": "^4.4.2",
-    "JSONStream": "^1.3.5",
     "method-override": "~3.0.0",
     "mongodb": "~4.9.1",
     "morgan": "~1.10.0",
@@ -47,6 +50,8 @@
     "node-polyfill-webpack-plugin": "2.0.1",
     "node-redis-pubsub": "~5.0.0",
     "object-hash": "^3.0.0",
+    "pug": "^3.0.2",
+    "randomstring": "^1.2.3",
     "redis": "~3.1.2",
     "socket.io": "~4.5.1",
     "socket.io-client": "^4.5.1",
@@ -54,11 +59,8 @@
     "sugar-inflections": "^2.0.6",
     "url-parse": "1.5.10",
     "uuid": "^8.3.2",
-    "winston": "~3.8.1",
     "webpack": "5.74.0",
-    "pug": "^3.0.2",
-    "randomstring": "^1.2.3",
-    "base64url": "^3.0.1"
+    "winston": "~3.8.1"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
