--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "docs": "npx docsify serve ./docs",
     "test": "mocha test/units/**/* test/intergration/**/*",
-    "build": "rimraf dist/* & tsc",
+    "build": "rimraf dist/* && gulp build",
+    "watch": "npm run build && gulp watch",
     "lint": "eslint 'src/**/*.js'",
     "coverage": "npx nyc --reporter cobertura npm run test",
     "start": "bin/buttress.sh",
@@ -66,6 +67,8 @@
   "devDependencies": {
     "eslint": "^8.23.0",
     "eslint-config-google": "^0.14.0",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "mocha": "^9.2.2"
   },
   "mocha": {
