--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "deploy/app.js",
   "scripts": {
     "docs": "npx docsify serve ./docs",
-    "test": "mocha test/units/**/* test/intergration/**/*",
+    "test": "npm run build && mocha --recursive test/units/**/* test/intergration/**/*",
     "build": "rimraf dist/* && gulp build",
     "watch": "npm run build && gulp watch",
     "lint": "eslint 'src/**/*.js'",
@@ -65,13 +65,10 @@
     "winston": "~3.8.1"
   },
   "devDependencies": {
-    "eslint": "^8.23.0",
+    "eslint": "^8.39.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "mocha": "^9.2.2"
-  },
-  "mocha": {
-    "require": "test/hooks.js"
+    "mocha": "^10.2.0"
   }
 }
