--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "url": "https://github.com/wearelighten/buttress-js/issues"
   },
   "dependencies": {
-    "@buttress/snippets": "1.0.0-14",
     "@buttress/api": "^3.0.0-33",
+    "@buttress/snippets": "1.0.0-14",
     "@hashgraph/sdk": "^2.19.2",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~4.1.1",
@@ -69,6 +69,12 @@
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "husky": "^8.0.3",
     "mocha": "^10.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test"
+    }
   }
 }
