--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ cache:
 before_script:
   - npm config set @buttress:registry https://git.wearelighten.co.uk/api/v4/projects/318/packages/npm/
   - npm config set -- '//git.wearelighten.co.uk/api/v4/projects/318/packages/npm/:_authToken' "$CI_BUTTRESS_REG_TOKEN"
-  - npm ci --include=dev --cache .npm --prefer-offline
+  - npm ci --include=dev --cache .npm --prefer-offline --verbose
 
 stages:          # List of stages for jobs, and their order of execution
   - test
