--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ cache:
     - public
 
 before_script:
+  - npm install npm@latest -g
   - npm config set @buttress:registry https://git.wearelighten.co.uk/api/v4/projects/318/packages/npm/
   - npm config set -- '//git.wearelighten.co.uk/api/v4/projects/318/packages/npm/:_authToken' "$CI_BUTTRESS_REG_TOKEN"
   - npm ci --include=dev --cache .npm --prefer-offline --verbose
