--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,9 @@ image: node:14
 # This folder is cached between builds
 # https://docs.gitlab.com/ee/ci/yaml/index.html#cache
 cache:
-  key: ${CI_COMMIT_REF_NAME}
+  key:
+    files:
+      - package-lock.json
   paths:
     - .npm/
     - public
@@ -12,7 +14,7 @@ before_script:
   - npm install npm@latest -g
   - npm config set @buttress:registry https://git.wearelighten.co.uk/api/v4/projects/318/packages/npm/
   - npm config set -- '//git.wearelighten.co.uk/api/v4/projects/318/packages/npm/:_authToken' "$CI_BUTTRESS_REG_TOKEN"
-  - npm ci --include=dev --cache .npm --prefer-offline --verbose
+  - npm ci --include=dev --cache .npm --prefer-offline
 
 stages:          # List of stages for jobs, and their order of execution
   - test
