--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "url": "https://github.com/wearelighten/buttress-js/issues"
   },
   "dependencies": {
-    "@buttress/api": "^3.0.0-36",
-    "@buttress/snippets": "1.0.0-14",
+    "@buttress/api": "~3.0.0-37",
+    "@buttress/snippets": "~1.0.0-14",
     "@hashgraph/sdk": "^2.19.2",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~4.1.1",
