--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cross-fetch": "^3.1.5",
     "express": "~4.18.1",
     "isolated-vm": "^4.4.2",
-    "JSONStream": "^1.3.5",
+    "stream-json": "^1.8.0",
     "method-override": "~3.0.0",
     "mongodb": "~4.9.1",
     "morgan": "~1.10.0",
