--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "cross-fetch": "^3.1.5",
     "express": "~4.18.1",
     "isolated-vm": "^4.4.2",
-    "stream-json": "^1.8.0",
     "method-override": "~3.0.0",
     "mongodb": "~4.9.1",
     "morgan": "~1.10.0",
@@ -59,12 +58,14 @@
     "rimraf": "^5.0.0",
     "socket.io": "~4.5.1",
     "socket.io-client": "^4.5.1",
+    "stream-json": "^1.8.0",
     "sugar": "~2.0.6",
     "sugar-inflections": "^2.0.6",
     "typescript": "^5.0.4",
     "url-parse": "1.5.10",
     "uuid": "^8.3.2",
     "webpack": "5.77.0",
+    "why-is-node-running": "^2.2.2",
     "winston": "~3.8.1"
   },
   "devDependencies": {
