--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "winston": "~3.8.1"
   },
   "devDependencies": {
+    "@types/node-redis-pubsub": "^3.0.1",
     "eslint": "^8.39.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
