TWEAK: gitlab-ci

--- a/src/config.json
+++ b/src/config.json
@@ -10,7 +10,7 @@
 		"BUTTRESS_REST_LISTEN_PORT": "8000",
 		"BUTTRESS_SOCK_LISTEN_PORT": "8010",
 
-		"BUTTRESS_DATASTORE_CONNECTION_STRING": "",
+		"BUTTRESS_DATASTORE_CONNECTION_STRING": "mongodb://localhost:27017",
 		"BUTTRESS_DATASTORE_OPTIONS": "appName=%BUTTRESS_APP_CODE%&maxPoolSize=100",
 
 		"BUTTRESS_REDIS_PORT": "6379",
