--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,9 @@ test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - npm run coverage
+  services:
+  - mongo:6
+  - redis:latest
   artifacts:
     reports:
       coverage_report:
