--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "rimraf dist/* && gulp build",
     "watch": "npm run build && gulp watch",
     "lint": "eslint 'src/**/*.js'",
-    "coverage": "npx nyc --reporter cobertura npm run test",
+    "coverage": "npx nyc --reporter text npm run test",
     "start": "bin/buttress.sh",
     "docker:build": "docker build -t buttress .",
     "docker:build-token": "npm run docker:build -- --build-arg NPM_TOKEN=${NPM_TOKEN}",
