REFACTOR: Use of global Model without models to use services instead

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "inlineSources": true,
     "rootDir": "./src",
     "allowJs": true,
+    "checkJs": false,
     "skipLibCheck": true
   },
   "include": ["./src/**/*"],
