FIX: Some missing env for tests
FIX: Handle plugins not existing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ variables:
   BUTTRESS_DATASTORE_CONNECTION_STRING: "mongodb://mongo:27017"
   BUTTRESS_APP_WORKERS: "0"
   BUTTRESS_REDIS_HOST: "redis"
+  BUTTRESS_HOST_URL: "http://localhost:8000"
+  BUTTRESS_APP_PATH: ".."
 
 # This folder is cached between builds
 # https://docs.gitlab.com/ee/ci/yaml/index.html#cache
