--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "bson-objectid": "^2.0.2",
     "cross-fetch": "^4.0.0",
     "express": "~4.18.1",
-    "isolated-vm": "^4.4.2",
+    "isolated-vm": "~4.4.2",
     "method-override": "~3.0.0",
     "mongodb": "~4.9.1",
     "morgan": "~1.10.0",
