--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "AGPL-3.0-or-later",
   "private": true,
   "engines": {
-    "node": "^14.x.x",
-    "npm": "^9.x.x"
+    "node": ">=18.18.2"
   },
   "main": "deploy/app.js",
   "scripts": {
@@ -36,41 +35,41 @@
   "dependencies": {
     "@buttress/api": "~3.0.0-39",
     "@buttress/snippets": "~1.0.0-17",
-    "@hashgraph/sdk": "^2.19.2",
+    "@hashgraph/sdk": "~2.19.2",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~4.1.1",
-    "base64url": "^3.0.1",
-    "body-parser": "~1.20.0",
-    "bson-objectid": "^2.0.2",
-    "cross-fetch": "^4.0.0",
-    "express": "~4.18.1",
-    "isolated-vm": "~4.4.2",
+    "base64url": "~3.0.1",
+    "body-parser": "~1.20.2",
+    "bson-objectid": "~2.0.4",
+    "cross-fetch": "~4.0.0",
+    "express": "~4.18.2",
+    "isolated-vm": "~4.6.0",
     "method-override": "~3.0.0",
     "mongodb": "~4.9.1",
     "morgan": "~1.10.0",
     "node-env-obj": "~0.2.5",
-    "node-polyfill-webpack-plugin": "2.0.1",
+    "node-polyfill-webpack-plugin": "~2.0.1",
     "node-redis-pubsub": "~5.0.0",
-    "object-hash": "^3.0.0",
-    "on-finished": "^2.4.1",
-    "pug": "^3.0.2",
-    "randomstring": "^1.2.3",
+    "object-hash": "~3.0.0",
+    "on-finished": "~2.4.1",
+    "pug": "~3.0.2",
+    "randomstring": "~1.3.0",
     "redis": "~3.1.2",
-    "rimraf": "^5.0.0",
-    "socket.io": "~4.5.1",
-    "socket.io-client": "^4.5.1",
-    "stream-json": "^1.8.0",
+    "rimraf": "~5.0.0",
+    "socket.io": "~4.7.2",
+    "socket.io-client": "~4.7.2",
+    "stream-json": "~1.8.0",
     "sugar": "~2.0.6",
-    "sugar-inflections": "^2.0.6",
-    "typescript": "^5.0.4",
-    "url-parse": "1.5.10",
-    "uuid": "^8.3.2",
-    "webpack": "5.77.0",
+    "sugar-inflections": "~2.0.6",
+    "typescript": "~5.3.2",
+    "url-parse": "~1.5.10",
+    "uuid": "~9.0.1",
+    "webpack": "~5.89.0",
     "winston": "~3.8.1"
   },
   "devDependencies": {
-    "@types/node-redis-pubsub": "^3.0.1",
-    "eslint": "^8.39.0",
+    "@types/node-redis-pubsub": "^3.0.4",
+    "eslint": "^8.54.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
