ADDED: errors and copying env variables to the lambda isolate

--- a/.example.env
+++ b/.example.env
@@ -28,3 +28,6 @@ BUTTRESS_SOCK_LISTEN_PORT_DEV=8031
 LAMBDA_API_WORKERS=
 LAMBDA_PATH_MUTATION_WORKERS=
 LAMBDA_CRON_WORKERS=
+
+# Lambda Env Variables
+LAMBDA_DEVELOPMENT_EMAIL_ADDRESS=
