--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/wearelighten/buttress-js/issues"
   },
   "dependencies": {
-    "@buttress/api": "~3.0.0-42",
+    "@buttress/api": "^3.0.0-43",
     "@buttress/snippets": "~1.0.0-19",
     "@hashgraph/sdk": "~2.38.0",
     "@socket.io/redis-adapter": "~7.2.0",
