--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@socket.io/redis-emitter": "~5.1.0",
     "base64url": "~3.0.1",
     "body-parser": "~1.20.2",
-    "bson-objectid": "~2.0.4",
+    "bson": "^6.6.0",
     "cross-fetch": "~4.0.0",
     "express": "~4.18.2",
     "isolated-vm": "~4.6.0",
