--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@buttress/api": "^3.0.0-43",
-    "@buttress/snippets": "~1.0.0-22",
+    "@buttress/snippets": "~1.0.0-23",
     "@hashgraph/sdk": "~2.38.0",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~5.1.0",
@@ -65,7 +65,8 @@
     "url-parse": "~1.5.10",
     "uuid": "~9.0.1",
     "webpack": "~5.89.0",
-    "winston": "~3.8.1"
+    "winston": "~3.8.1",
+    "puppeteer": "22.11.0"
   },
   "devDependencies": {
     "@types/node-redis-pubsub": "^3.0.4",
