--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@buttress/buttress-js",
   "version": "3.0.0-1",
   "description": "The federated real-time open data platform",
-  "author": "Data Performance Consultancy LTD",
+  "author": "Data People Connected LTD",
   "license": "AGPL-3.0-or-later",
   "private": true,
   "engines": {
