ADDED: Pre-commit Licensing check

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint 'src/**/*.js'",
     "coverage": "npx nyc --reporter text npm run test",
     "start": "bin/buttress.sh",
+    "licence-check": "./.husky/licence-check",
     "docker:build": "docker build -t buttress .",
     "docker:build-token": "npm run docker:build -- --build-arg NPM_TOKEN=${NPM_TOKEN}",
     "docker:run": "docker-compose -f .docker/docker-compose.yml up",
