--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "object-hash": "~3.0.0",
     "on-finished": "~2.4.1",
     "pug": "~3.0.2",
+    "puppeteer": "22.11.0",
     "randomstring": "~1.3.0",
     "redis": "~3.1.2",
     "rimraf": "~5.0.0",
@@ -66,8 +67,7 @@
     "url-parse": "~1.5.10",
     "uuid": "~9.0.1",
     "webpack": "~5.89.0",
-    "winston": "~3.8.1",
-    "puppeteer": "22.11.0"
+    "winston": "~3.8.1"
   },
   "devDependencies": {
     "@types/node-redis-pubsub": "^3.0.4",
