--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:e2e": "NODE_ENV=test node test/before-e2e.js && echo \"Running BJS in Install Mode.\" && NODE_ENV=test INSTALL_MODE=true ./bin/app.sh && echo \"Install Complete.\\n\"&& NODE_ENV=test TEST_ENV=e2e mocha --recursive --bail test/e2e/index.test.js",
     "build": "rimraf dist/* && gulp build",
     "watch": "npm run build && gulp watch",
-    "lint": "eslint 'src/**/*.js'",
+    "lint": "eslint ./src",
     "coverage": "npx nyc --reporter text npm run test",
     "start": "bin/buttress.sh",
     "licence-check": "./.husky/licence-check",
@@ -63,19 +63,22 @@
     "stream-json": "~1.8.0",
     "sugar": "~2.0.6",
     "sugar-inflections": "~2.0.6",
-    "typescript": "~5.3.2",
     "url-parse": "~1.5.10",
     "uuid": "~9.0.1",
     "webpack": "~5.89.0",
     "winston": "~3.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node-redis-pubsub": "^3.0.4",
-    "eslint": "^8.54.0",
+    "eslint": "^9.8.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^8.0.3",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0"
   }
 }
