--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.2.0",
     "@types/node-redis-pubsub": "^3.0.4",
     "eslint": "^9.8.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "typescript": "^5.5.4",
