--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "docker:build-token": "npm run docker:build -- --build-arg NPM_TOKEN=${NPM_TOKEN}",
     "docker:run": "docker-compose -f .docker/docker-compose.yml up",
     "docker:run-full": "docker-compose -f .docker/docker-compose.full.yml up",
-    "prepare": "husky install && ./.husky/nvm-fix"
+    "prepare": "husky install && [ -f ./.husky/nvm-fix ] && ./.husky/nvm-fix || true"
   },
   "repository": {
     "type": "git",
@@ -34,8 +34,8 @@
     "url": "https://github.com/wearelighten/buttress-js/issues"
   },
   "dependencies": {
-    "@buttress/api": "^3.0.0-43",
-    "@buttress/snippets": "~1.0.0-23",
+    "@buttress/api": "~3.0.0-45",
+    "@buttress/snippets": "~1.0.0-25",
     "@hashgraph/sdk": "~2.38.0",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~5.1.0",
