--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "test": "npm run build && npm run test:unit && npm run test:e2e",
     "test:unit": "NODE_ENV=test mocha --recursive --parallel test/unit/**/*",
     "test:e2e": "NODE_ENV=test node test/before-e2e.js && echo \"Running BJS in Install Mode.\" && NODE_ENV=test INSTALL_MODE=true ./bin/app.sh && echo \"Install Complete.\\n\"&& NODE_ENV=test TEST_ENV=e2e mocha --recursive --bail test/e2e/index.test.js",
-    "build": "rimraf dist/* && gulp build",
-    "watch": "npm run build && gulp watch",
+    "clean": "rimraf dist/*",
+    "build": "npm run clean && npm run build-ts && npm run build-copy-non-ts",
+    "build-ts": "tsc",
+    "build-copy-non-ts": "cpx 'src/**/*.!(ts)' dist",
+    "watch": "npm run clean && concurrently -k -n 'TS,Non-TS' -c 'bgBlue.bold,bgMagenta.bold' 'npm run watch-ts' 'npm run watch-non-ts'",
+    "watch-ts": "tsc -w",
+    "watch-non-ts": "cpx 'src/**/*.!(ts)' dist -w",
     "lint": "eslint ./src",
     "coverage": "npx nyc --reporter text npm run test",
     "start": "bin/buttress.sh",
@@ -74,11 +79,10 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
     "@types/node-redis-pubsub": "^3.0.4",
+    "concurrently": "^8.2.2",
+    "cpx": "^1.5.0",
     "eslint": "^9.8.0",
     "eslint-config-google": "^0.14.0",
-    "gulp": "^4.0.2",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "typescript": "^5.5.4",
