ADDED: Ported policy e2e tests from api
ADDED: source-map-support to dev deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "sourceMap": true,
-    "inlineSources": true,
+    "inlineSources": false,
     "rootDir": "./src",
     "allowJs": true,
     "checkJs": false,
